istio/gateway-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ${GATEWAY_NAME}
  namespace: ${NAMESPACE}
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "${HOST_DOMAIN}"
