istio/virtual-service-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
spec:
  hosts:
  - "${SERVICE_HOST}"
  gateways:
  - "${GATEWAY_NAME}"
  http:
  - match:
    - uri:
        prefix: "/${URI_PREFIX}"
    route:
    - destination:
        host: ${DESTINATION_SERVICE}
        port:
          number: ${SERVICE_PORT}
